[gd_scene load_steps=7 format=3 uid="uid://bj77avgsiejwn"]

[ext_resource type="Script" uid="uid://dt4hc7g44kr8h" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="PackedScene" uid="uid://2617fe2k0cop" path="res://Scenes/Objects/Weapons/bullet.tscn" id="2_6t5aa"]
[ext_resource type="PackedScene" uid="uid://dt4y20i3cdqs3" path="res://Scenes/UI/player_ui.tscn" id="2_cvnsp"]
[ext_resource type="AudioStream" uid="uid://27vqf6gnsw0n" path="res://Assets/Audio/game_bgm.ogg" id="4_vgqql"]
[ext_resource type="AudioStream" uid="uid://dxvg8bk4rfjms" path="res://Assets/Audio/Hurt.ogg" id="5_fkybt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f60y1"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_v0iea")
Bullet = ExtResource("2_6t5aa")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_f60y1")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.514042, -1.00012)

[node name="PlayerUI" parent="." instance=ExtResource("2_cvnsp")]

[node name="FireRateTimer" type="Timer" parent="."]

[node name="BGMPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_vgqql")
volume_db = -25.0

[node name="HurtSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_fkybt")
volume_db = -21.0

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
